--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 }
 
 #navbar_top {
-	background: rgba(200, 20,20,1);
+	background: rgba(150, 20,20,1);
 	z-index: 1;
 }
 
@@ -25,3 +25,20 @@
 
 }
 
+#map_overlay{
+	position: absolute;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+}
+
+.map_blocks{
+	height: 100px;
+	width: 100px;
+	float: left;
+	border: 1px solid #D8D8D8;
+}
+
+.map_blocks.hovered{
+	box-shadow: 0px 0px 30px rgba(200, 40, 40, 0.5) inset;
+}
